[package]
name = "linotype"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A stable transactionally-incremental indexed map that can pin its values."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/linotype"
homepage = "https://github.com/Tamschi/linotype/tree/v0.0.1"
documentation = "https://docs.rs/linotype/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/linotype" }
is-it-maintained-open-issues = { repository = "Tamschi/linotype" }
maintenance = { status = "experimental" } # This may differ between branches.

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"

[dependencies]
tap = "1.0.1"
typed-arena = { version = "2.0.1", default-features = false }
