[package]
name = "linotype"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2021"
description = "A keyed sequence reprojector that can optionally pin its values. (A stable-ordered transactionally-incremental multi-map.)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/linotype"
homepage = "https://github.com/Tamschi/linotype/tree/v0.0.1"
documentation = "https://docs.rs/linotype/0.0.1"
keywords = ["data-driven", "stateful", "reprojection", "map", "pin"]
categories = ["data-structures", "no-std", "rust-patterns"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/linotype" }
is-it-maintained-open-issues = { repository = "Tamschi/linotype" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
std = [] # Enables better pinned-`Drop`-panic handling.

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"

[dependencies]
higher-order-closure = "0.0.5"
scopeguard = "1.1.0"
tap = "1.0.1"
typed-arena = { version = "2.0.1", default-features = false }
